Fixed issues with car2go detail wrapping funny.

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -123,14 +123,11 @@
     .rental-status {
       margin-left: 30px;
       font-size: 24px !important;
-      .dash-nopad {
-        margin-top: 10px;
-      }
+      
       .dash {
-        margin-top: 10px;
+        margin-top: 0;
         // margin-right: 10px !important;
         // padding: 15px !important;
-        height: 60px !important;
       }
     }
   }
@@ -144,6 +141,12 @@
 
   .span3 {
     margin-left: 10px;
+  }
+
+  #alternate-template {
+    .dash {
+      margin-top: 10px;
+    }
   }
 }
 @media (min-width: 319px) and (max-width: 479px) {
