--- a/app/assets/stylesheets/stops.css.scss
+++ b/app/assets/stylesheets/stops.css.scss
@@ -80,6 +80,14 @@ span.desc {
   }
 }
 
+.detail-header-icon {
+  display: inline-block;
+  border-radius: 100%;
+  width: 50px;
+  height: 50px;
+  position: relative;
+}
+
 #alternate-template {
   hr {
     margin: 15px 0;
@@ -95,8 +103,8 @@ span.desc {
   }
 
   .rental-status {
+    display: block;
     font-size: 30px;
-    width: 100%;
     
     span {
       font-size: 12px;
@@ -107,21 +115,22 @@ span.desc {
       border-radius: 20px;
       height: 90px;
       border: 2px solid #fff;
-      margin-right: 30px;
+      margin: 10px 30px 10px 0;
       box-shadow: 0 1px 2px 1px rgba(0,0,0,0.3);
+      overflow: hidden;
     }
 
     .dash {
       background: #009fe4;
       border-radius: 20px;
       padding: 15px 30px 15px 30px;
-      margin-right: 30px;
+      margin: 10px 30px 10px 0;
       text-align: center;
       border: 2px solid #fff;
       box-shadow: 0 1px 2px 1px rgba(0,0,0,0.3);
       color: #fff;
       height: 90px;
-      display: table;
+      display: inline-block;
 
       p {
         display: table-cell; 
